--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Hola mundo</h1>
-    <h2>hello beibi</h2>
-    <h3>probando </h3>
-    
+        <div class="over">
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
 </body>
 </html>
