--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
         <div class="over">
             <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <p>Lorem ipsum dolor sit.</p>
         </div>
 </body>
 </html>
